# fz_bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml
src/: api.rs  main.rs
